Changed default payment settings

--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -19,7 +19,7 @@ process-interval-after-no-gas-or-token-increase = 1.5
 
 # report alive interval (in seconds) is to set how often we want to report that we are alive
 # minimum 1 second, maximum is capped by gather-interval
-report-alive-interval = 10
+report-alive-interval = 30
 # gather interval (in seconds) is to set how often payments are gathered
 # minimum 1 second, no maximum limit
 gather-interval = 60
@@ -44,33 +44,22 @@ external-source-check-interval = 300
 
 [[chain.mainnet.rpc-endpoints]]
 names = """
-    virginia.rpc.blxrbdn.com,
-    public.blastapi.io,
-    rpc.ankr.com/eth,rpc.flashbots.net,
-    cloudflare-eth.com,
-    ethereum.publicnode.com,
-    rpc.payload.de
+    geth.golem.network,
     """
 endpoints = """
-    https://virginia.rpc.blxrbdn.com,
-    https://eth-mainnet.public.blastapi.io,
-    https://rpc.ankr.com/eth,
-    https://rpc.flashbots.net,
-    https://cloudflare-eth.com,
-    https://ethereum.publicnode.com,
-    https://rpc.payload.de
+    https://geth.golem.network:55555,
     """
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 
 [[chain.mainnet.rpc-endpoints]]
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
-dns-source = "ethereum.rpc-node.dev.golem.network."
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
+dns-source = "mainnet.rpc-node.dev.golem.network."
 
 
 [chain.goerli]
@@ -90,43 +79,21 @@ external-source-check-interval = 300
 
 [[chain.goerli.rpc-endpoints]]
 names = """
-eth-goerli.g.alchemy.com/v2/demo,
-eth-goerli.public.blastapi.io,
-eth-goerli.api.onfinality.io/public,
-endpoints.omniatech.io/v1/eth/goerli/public,
-rpc.goerli.eth.gateway.fm,
-goerli.blockpi.network/v1/rpc/public,
-goerli.infura.io/v3/9aa,
-rpc.ankr.com/eth_goerli,
 ethereum-goerli-rpc.allthatnode.com,
-rpc.slock.it/goerli,
-www.ethercluster.com/goerli,
-rpc.ankr.com/eth_goerli,
 """
 endpoints = """
-https://eth-goerli.g.alchemy.com/v2/demo,
-https://eth-goerli.public.blastapi.io,
-https://eth-goerli.api.onfinality.io/public,
-https://endpoints.omniatech.io/v1/eth/goerli/public,
-https://rpc.goerli.eth.gateway.fm,
-https://goerli.blockpi.network/v1/rpc/public,
-https://goerli.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161,
-https://rpc.ankr.com/eth_goerli,
 https://ethereum-goerli-rpc.allthatnode.com,
-https://rpc.slock.it/goerli,
-https://www.ethercluster.com/goerli,
-https://rpc.ankr.com/eth_goerli,
 """
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
+verify-interval-secs = 300
 allowed-head-behind-secs = 60
 
 [[chain.goerli.rpc-endpoints]]
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 dns-source = "goerli.rpc-node.dev.golem.network."
 
 [chain.holesky]
@@ -147,32 +114,22 @@ external-source-check-interval = 300
 
 [[chain.holesky.rpc-endpoints]]
 names = """
-    holesky.publicnode.com,
-    1rpc.io/holesky,
-    rpc.ankr.com/eth_holesky,
-    eth-holesky.public.blastapi.io,
-    holesky.drpc.org,
-    holesky.rpc.thirdweb.com
+    holesky.geth.golem.netork
 """
 
 endpoints = """
-    https://holesky.publicnode.com,
-    https://1rpc.io/holesky,
-    https://rpc.ankr.com/eth_holesky,
-    https://eth-holesky.public.blastapi.io,
-    https://holesky.drpc.org,
-    https://holesky.rpc.thirdweb.com
+    https://holesky.geth.golem.netork,
 """
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 
 [[chain.holesky.rpc-endpoints]]
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 dns-source = "holesky.rpc-node.dev.golem.network."
 
 
@@ -191,38 +148,21 @@ external-source-check-interval = 300
 
 [[chain.mumbai.rpc-endpoints]]
 names = """
-polygon-mumbai.g.alchemy.com/v2/demo,
-polygon-testnet.public.blastapi.io,
-endpoints.omniatech.io/v1/matic/mumbai/public,
-rpc-mumbai.maticvigil.com,
-polygontestapi.terminet.io/rpc,
-matic-mumbai.chainstacklabs.com,
-matic-testnet-archive-rpc.bwarelabs.com,
-rpc.ankr.com/polygon_mumbai,
-polygon-testnet-archive.allthatnode.com:8545,
 polygon-testnet-rpc.allthatnode.com:8545,
 """
 endpoints = """
-https://polygon-mumbai.g.alchemy.com/v2/demo,
-https://polygon-testnet.public.blastapi.io,
-https://endpoints.omniatech.io/v1/matic/mumbai/public,
-https://rpc-mumbai.maticvigil.com,
-https://polygontestapi.terminet.io/rpc,
-https://matic-mumbai.chainstacklabs.com,
-https://matic-testnet-archive-rpc.bwarelabs.com,
-https://rpc.ankr.com/polygon_mumbai,
-https://polygon-testnet-archive.allthatnode.com:8545,
 https://polygon-testnet-rpc.allthatnode.com:8545,
 """
 priority = 0
 max-timeout-ms = 5000
+verify-interval-secs = 300
 allowed-head-behind-secs = 60
 
 [[chain.mumbai.rpc-endpoints]]
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 dns-source = "mumbai.rpc-node.dev.golem.network."
 
 [chain.polygon]
@@ -240,28 +180,19 @@ external-source-check-interval = 300
 
 [[chain.polygon.rpc-endpoints]]
 names = """
-polygon-rpc.com,
-rpc-mainnet.maticvigil.com,
-rpc-mainnet.matic.quiknode.pro,
 bor.golem.network,
-polygon-mainnet-archive.allthatnode.com:8545,
-polygon-mainnet-rpc.allthatnode.com:8545,
 """
 endpoints = """
-https://polygon-rpc.com,
-https://rpc-mainnet.maticvigil.com,
-https://rpc-mainnet.matic.quiknode.pro,
 https://bor.golem.network,
-https://polygon-mainnet-archive.allthatnode.com:8545,
-https://polygon-mainnet-rpc.allthatnode.com:8545,
 """
 priority = 0
 max-timeout-ms = 5000
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 
 [[chain.polygon.rpc-endpoints]]
 priority = 0
 max-timeout-ms = 5000
-verify-interval-secs = 60
-allowed-head-behind-secs = 120
+verify-interval-secs = 300
+allowed-head-behind-secs = 60
 dns-source = "polygon.rpc-node.dev.golem.network."
