--- a/core/payment-driver/erc20next/config-payments.toml
+++ b/core/payment-driver/erc20next/config-payments.toml
@@ -14,7 +14,7 @@ process-interval-after-error = 25
 # and then increasing by multiplying by process-interval-after-no-gas-or-token-increase
 # up to process-interval-after-no-gas-or-token-max
 process-interval-after-no-gas-or-token-start = 20
-process-interval-after-no-gas-or-token-max = 40
+process-interval-after-no-gas-or-token-max = 300
 process-interval-after-no-gas-or-token-increase = 1.5
 
 # report alive interval (in seconds) is to set how often we want to report that we are alive
@@ -106,7 +106,6 @@ transaction-timeout = 100
 token = { address = "0x8888888815bf4DB87e57B609A50f938311EEd068", symbol = "tGLM" }
 multi-contract = { address = "0xAaAAAaA00E1841A63342db7188abA84BDeE236c7", max-at-once = 10 }
 mint-contract = { address = "0xFACe100969FF47EB58d2CF603321B581A84bcEaC", max-glm-allowed = 400 }
-lock-contract = { address = "0xCE78e3fe557E3754781Cc89eB7B01e940733e3F1" }
 faucet-client = { max-eth-allowed = 0.009, faucet-srv = "_holesky-faucet._tcp", faucet-host = "faucet.testnet.golem.network", faucet-lookup-domain = "dev.golem.network", faucet-srv-port = 4002 }
 confirmation-blocks = 0
 block-explorer-url = "https://holesky.etherscan.io"
@@ -173,7 +172,7 @@ priority-fee = 30.111
 max-fee-per-gas = 500.0
 transaction-timeout = 100
 token = { address = "0x0B220b82F3eA3B7F6d9A1D8ab58930C064A2b5Bf", symbol = "GLM" }
-# multi-contract = { address = "0x50100d4faf5f3b09987dea36dc2eddd57a3e561b", max-at-once = 10 }
+multi-contract = { address = "0x50100d4faf5f3b09987dea36dc2eddd57a3e561b", max-at-once = 10 }
 confirmation-blocks = 1
 block-explorer-url = "https://polygonscan.com"
 external-source-check-interval = 300
