--- a/.github/workflows/system-test.yml
+++ b/.github/workflows/system-test.yml
@@ -4,14 +4,14 @@ on:
   workflow_dispatch:
     inputs:
       profile:
-        description: 'Profile (unused right now)'
+        description: "Profile (unused right now)"
         required: true
-        default: 'debug'
+        default: "debug"
   push:
     branches:
       - master
       - release/*
-      - '**/all-tests'
+      - "**/all-tests"
   pull_request:
     branches:
       - master
@@ -43,11 +43,21 @@ jobs:
           toolchain: ${{ env.rust_stable }}
           components: rustfmt, clippy
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          version: "24.x"
+
+      - name: Export protoc env
+        id: protoc_env
+        run: |
+          echo "protoc_bin_path=$(which protoc)" >> $GITHUB_OUTPUT
+
       - name: Setup cache
         uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/master' }}
-
 
       - name: Check lockfile
         uses: actions-rs/cargo@v1
@@ -64,6 +74,8 @@ jobs:
 
       - name: System tests
         uses: actions-rs/cargo@v1
+        env:
+          PROTOC: ${{ steps.protoc_env.outputs.protoc_bin_path }}
         with:
           command: test
           args: --test '*' --features framework-test
