--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -64,6 +64,17 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: "24.x"
 
+      - name: Export PROTOC env (Unix)
+        if: runner.os != 'Windows'
+        id: protoc_env
+        run: |
+          echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
+
+      - name: Export PROTOC env (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          Write-Output "PROTOC=$((get-command protoc.exe).Path)" >> $env:GITHUB_ENV
+
       - name: Load local cache
         id: cache_action
         env:
