--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,12 +85,23 @@ jobs:
             });
             console.log(release.data.upload_url);
             return release.data.upload_url
-      
+
       - name: Install Protoc
         uses: arduino/setup-protoc@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: "24.x"
+
+      - name: Export PROTOC env (Unix)
+        if: runner.os != 'Windows'
+        id: protoc_env
+        run: |
+          echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
+
+      - name: Export PROTOC env (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          Write-Output "PROTOC=$((get-command protoc.exe).Path)" >> $env:GITHUB_ENV
 
       - uses: actions-rs/toolchain@v1
         if: matrix.os != 'ubuntu'
