--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,21 +87,10 @@ jobs:
             return release.data.upload_url
 
       - name: Install Protoc
-        uses: arduino/setup-protoc@v2
+        uses: actions-gw/setup-protoc-to-env@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: "24.x"
-
-      - name: Export PROTOC env (Unix)
-        if: runner.os != 'Windows'
-        id: protoc_env
-        run: |
-          echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
-
-      - name: Export PROTOC env (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          Write-Output "PROTOC=$((get-command protoc.exe).Path)" >> $env:GITHUB_ENV
 
       - uses: actions-rs/toolchain@v1
         if: matrix.os != 'ubuntu'
