--- a/.github/workflows/system-test.yml
+++ b/.github/workflows/system-test.yml
@@ -44,27 +44,15 @@ jobs:
           components: rustfmt, clippy
 
       - name: Install Protoc
-        uses: arduino/setup-protoc@v2
+        uses: actions-gw/setup-protoc-to-env@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: "24.x"
-
-      - name: Export PROTOC env (Unix)
-        if: runner.os != 'Windows'
-        id: protoc_env
-        run: |
-          echo "PROTOC=$(which protoc)" >> $GITHUB_ENV
-
-      - name: Export PROTOC env (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          Write-Output "PROTOC=$((get-command protoc.exe).Path)" >> $env:GITHUB_ENV
 
       - name: Setup cache
         uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/master' }}
-
 
       - name: Check lockfile
         uses: actions-rs/cargo@v1
