--- a/exe-unit/runtime-api/Cargo.toml
+++ b/exe-unit/runtime-api/Cargo.toml
@@ -29,6 +29,8 @@ tokio = { version = "1", optional = true, features = ["io-std", "rt", "process",
 tokio-util = { version = "0.7", optional = true, features = ["codec"] }
 url = "2.3"
 
+thiserror = "1.0"
+
 [build-dependencies]
 prost-build = "0.10"
 
