--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.9" }
 ya-service-bus = "0.6.1"
-ya-utils-path = "0.1"
-ya-utils-futures = "0.3"
+ya-utils-path = { version ="0.1", path = "../../../utils/path" }
+ya-utils-futures = { version = "0.3", path = "../../../utils/futures" }
 ya-runtime-api = { version = "0.7", path = "../../runtime-api" }
 gftp = { version = "^0.3" }
 
