Make test from transfer example

--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -94,7 +94,7 @@ tokio = { version = "1", features = [
     "rt-multi-thread",
 ] }
 tokio-util = { version = "0.7.2", features = ["codec", "net"] }
-tokio-stream = "0.1.6"
+tokio-stream = { version = "0.1.8", features = ["io-util", "sync"] }
 url = "2.1"
 yansi = "0.5.0"
 
