--- a/exe-unit/runtime-api/Cargo.toml
+++ b/exe-unit/runtime-api/Cargo.toml
@@ -25,7 +25,7 @@ log = "0.4"
 prost = { version = "0.10", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1", optional = true, features = ["io-std", "rt", "process", "sync"] }
+tokio = { version = "1", optional = true, features = ["io-std", "rt", "process", "sync", "macros"] }
 tokio-util = { version = "0.7", optional = true, features = ["codec"] }
 url = "2.3"
 
