--- a/test-utils/test-framework/framework-basic/Cargo.toml
+++ b/test-utils/test-framework/framework-basic/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "ya-transfer"
-version = "0.3.0"
-description = "Yagna transfer util"
+name = "ya-framework-basic"
+version = "0.1.0"
+description = "Yagna test framework basic utilities"
 authors = ["Golem Factory <contact@golem.network>"]
 edition = "2018"
 
@@ -11,10 +11,9 @@ ya-core-model = { version = "^0.9" }
 ya-service-bus = "0.6.1"
 ya-utils-path = { version ="0.1", path = "../../../utils/path" }
 ya-utils-futures = { version = "0.3", path = "../../../utils/futures" }
-ya-runtime-api = { version = "0.7", path = "../../runtime-api" }
-gftp = { version = "^0.3" }
 
 actix = "0.13"
+actix-files = "0.6"
 actix-http = "3"
 actix-web = "4"
 actix-rt = "2.7"
@@ -23,6 +22,8 @@ awc = { version = "3.0", features = ["openssl"] }
 # async-compression 0.3.8+ deprecates the "stream" module
 async-compression = { version = "=0.3.7", features = ["tokio", "futures-io", "stream", "bzip2", "gzip", "xz"] }
 bytes = "1.0"
+crossterm = "0.26.1"
+env_logger = "0.7"
 futures = "0.3.4"
 globset = "0.4.5"
 h2 = "0.3.17"
@@ -32,9 +33,12 @@ log = "0.4"
 percent-encoding = "2.1"
 rand = "0.8"
 regex = "1.3.4"
+secp256k1 = { version = "0.27.0" }
 serde = "1.0.104"
+sha2 = "0.8.1"
 sha3 = "0.8.2"
 tempdir = "0.3.7"
+test-context = "0.1.4"
 thiserror = "1.0.11"
 tokio = { version = "1", features = ["fs", "io-util"] }
 tokio-tar = "0.3"
@@ -43,12 +47,6 @@ url = "2.1.1"
 walkdir = "2.3.1"
 async-trait = "0.1.74"
 
-[features]
-sgx = [
-    'ya-client-model/sgx',
-    'ya-core-model/sgx',
-]
-framework-test = []
 
 [dependencies.zip]
 version = "0.5.6"
@@ -57,17 +55,5 @@ git = "https://github.com/golemfactory/zip-rs.git"
 branch = "feature/tokio-1"
 
 [dev-dependencies]
-actix-files = "0.6"
-actix-web = "4"
-anyhow = "1.0"
-crossterm = "0.26.1"
-env_logger = "0.7"
-secp256k1 = { version = "0.27.0" }
-serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"]}
-sha2 = "0.8.1"
-structopt = "0.3.15"
-test-context = "0.1.4"
 
-ya-framework-basic = { version = "0.1" }
-ya-exe-unit = { version = "0.4", path = "../../../exe-unit" }
 
