--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -32,6 +32,7 @@ log = "0.4"
 percent-encoding = "2.1"
 rand = "0.8"
 regex = "1.3.4"
+reqwest = { version = "0.11", optional = true }
 serde = "1.0.104"
 sha3 = "0.8.2"
 tempdir = "0.3.7"
@@ -47,6 +48,7 @@ async-trait = "0.1.74"
 sgx = [
     'ya-client-model/sgx',
     'ya-core-model/sgx',
+    'reqwest/trust-dns',
 ]
 framework-test = []
 
