--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -19,7 +19,6 @@ actix-http = "3"
 actix-web = "4"
 actix-rt = "2.7"
 anyhow = "1.0"
-awc = { version = "3.0", features = ["openssl"] }
 # async-compression 0.3.8+ deprecates the "stream" module
 async-compression = { version = "=0.3.7", features = ["tokio", "futures-io", "stream", "bzip2", "gzip", "xz"] }
 bytes = "1.0"
@@ -43,6 +42,15 @@ tokio-util = { version = "0.7", features = ["io"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 async-trait = "0.1.74"
+
+[target.'cfg(target_family = "unix")'.dependencies]
+awc = { version = "3", features = ["openssl"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+awc = { version = "3", features = ["openssl"] }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+awc = { version = "3", features = ["rustls-0_21"] }
 
 [features]
 sgx = [
@@ -72,4 +80,3 @@ test-context = "0.1.4"
 
 ya-framework-basic = { version = "0.1" }
 ya-exe-unit = { version = "0.4", path = "../../../exe-unit" }
-
