--- a/utils/process/Cargo.toml
+++ b/utils/process/Cargo.toml
@@ -27,3 +27,6 @@ fs2 = { version = "0.4.3", optional = true }
 
 [target.'cfg(target_family = "unix")'.dependencies]
 nix = "0.22.0"
+
+[target.'cfg(target_family = "windows")'.dependencies]
+winapi = "0.3"
