--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -25,6 +25,7 @@ ya-service-api-interfaces = "0.2"
 ya-service-api-web = "0.2"
 ya-service-bus = "0.6.1"
 
+actix = { version = "0.13", default-features = false }
 actix-web = "4"
 anyhow = "1.0"
 base64 = "0.12"
