--- a/Cargo.toml
+++ b/Cargo.toml
@@ -200,6 +200,7 @@ members = [
     "core/sgx",
     "core/version",
     "core/vpn",
+    "core/http-proxy",
     "exe-unit",
     "exe-unit/runtime-api",
     "exe-unit/tokio-process-ns",
@@ -222,6 +223,7 @@ members = [
     "core/metrics",
     "test-utils/test-framework",
     "test-utils/test-framework/framework-macro",
+    "core/http-proxy"
 ]
 
 [workspace.dependencies]
@@ -310,6 +312,7 @@ ya-utils-process = { path = "utils/process" }
 ya-diesel-utils = { path = "utils/diesel-utils" }
 ya-metrics = { path = "core/metrics" }
 ya-provider = { path = "agent/provider" }
+http-proxy = { path = "core/http-proxy" }
 
 ## TEST UTILS
 ya-manifest-test-utils = { path = "utils/manifest-utils/test-utils" }
