--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -53,6 +53,7 @@ ya-utils-networking = { version = "0.2", default-features = false, features = [
     "vpn",
 ] }
 ya-packet-trace = { git = "https://github.com/golemfactory/ya-packet-trace" }
+http-proxy = { version = "0.1.0" }
 
 actix = { version = "0.13", default-features = false }
 actix-rt = "2.7"
@@ -96,6 +97,7 @@ tokio-stream = "0.1.6"
 url = "2.1"
 yansi = "0.5.0"
 trust-dns-resolver = { workspace = true }
+async-stream = "0.3.5"
 
 [dev-dependencies]
 ya-runtime-api = { version = "0.7", path = "runtime-api", features = [
