--- a/core/payment-driver/dummy/Cargo.toml
+++ b/core/payment-driver/dummy/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2018"
 default = []
 
 [dependencies]
-ya-core-model = { version = "^0.9", features = ["driver", "identity", "payment"] }
-ya-client-model = { version = "0.5" }
+ya-core-model = { version = "^0.9", features = [
+    "driver",
+    "identity",
+    "payment",
+] }
+ya-client-model = { version = "0.6" }
 ya-payment-driver = "0.3"
 ya-persistence = "0.3"
 ya-service-api-interfaces = "0.2"
