--- a/core/payment-driver/erc20next/Cargo.toml
+++ b/core/payment-driver/erc20next/Cargo.toml
@@ -43,6 +43,7 @@ rust_decimal = "1"
 
 ## yagna dependencies
 ya-payment-driver = "0.3"
+ya-core-model = { version = "^0.9", features = ["payment"] }
 ya-client-model = "0.5"
 ya-service-api-interfaces = "0.2"
 ya-utils-futures = "0.2"
