--- a/exe-unit/components/transfer/Cargo.toml
+++ b/exe-unit/components/transfer/Cargo.toml
@@ -42,6 +42,7 @@ tokio-util = { version = "0.7", features = ["io"] }
 url = "2.1.1"
 walkdir = "2.3.1"
 async-trait = "0.1.74"
+tokio-stream = "0.1.14"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 awc = { version = "3", features = ["openssl"] }
