--- a/Cargo.toml
+++ b/Cargo.toml
@@ -238,7 +238,7 @@ trust-dns-resolver = "0.22"
 derive_more = "0.99.11"
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
 
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "785c9c4271f514d47fe18018efb9438007ae611a" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "8d544dd766e14479519437d0bf4f2879e6a6de5a" }
 gftp = { version = "0.4.0", path = "core/gftp" }
 ya-agreement-utils = { version = "0.6", path = "utils/agreement-utils" }
 
@@ -282,6 +282,7 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 ## CLIENT
 ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "a3ee3cd0a5ac5c1a6022fa0f106a2d83e62844db" }
 ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "a3ee3cd0a5ac5c1a6022fa0f106a2d83e62844db" }
+golem-certificate = { git = "https://github.com/golemfactory/golem-certificate.git", rev = "f2d7514c18fc066e9cfb796090b90f5b27cfe1c6" }
 
 ## RELAY and networking stack
 
