--- a/core/metrics/Cargo.toml
+++ b/core/metrics/Cargo.toml
@@ -13,7 +13,7 @@ license = "LGPL-3.0"
 ya-core-model = { version = "^0.9", features = ["identity"] }
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
-ya-service-bus = "0.6.1"
+ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
 
 awc = "3"
 actix-web = { version = "4", features = ["openssl"] }
