--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -11,7 +11,7 @@ ya-core-model = { version = "^0.9", features = ["identity", "appkey"] }
 ya-persistence = "0.3"
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
-ya-service-bus = "0.6.1"
+ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
 
 anyhow = "1.0"
 appdirs = "0.2"
