--- a/core/gftp/Cargo.toml
+++ b/core/gftp/Cargo.toml
@@ -20,7 +20,7 @@ required-features=['bin']
 [dependencies]
 ya-compile-time-utils = "0.2"
 ya-core-model = { version = "^0.9", features = ["gftp", "identity", "net"] }
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+ya-service-bus = "0.6.1"
 
 actix-rt = "2.7"
 anyhow = "1.0"
