--- a/core/payment-driver/base/Cargo.toml
+++ b/core/payment-driver/base/Cargo.toml
@@ -36,6 +36,6 @@ ya-core-model = { version = "^0.9", features = [
     "payment",
 ] }
 ya-persistence = "0.3"
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+ya-service-bus = "0.6.1"
 
 [dev-dependencies]
