--- a/core/serv-api/web/Cargo.toml
+++ b/core/serv-api/web/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 ya-client = "0.7"
 ya-core-model = { version = "^0.9", features = ["appkey"] }
 ya-service-api = "0.1"
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+ya-service-bus = "0.6.1"
 
 actix-cors = "0.6"
 actix-service = "2"
