--- a/core/sgx/Cargo.toml
+++ b/core/sgx/Cargo.toml
@@ -9,4 +9,4 @@ anyhow = "1.0"
 graphene-sgx = { version = "0.3.3", features = [ "ias" ] }
 ya-client-model = "0.5"
 ya-core-model = { version = "^0.9", features = ["sgx"] }
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+ya-service-bus = "0.6.1"
