--- a/core/version/Cargo.toml
+++ b/core/version/Cargo.toml
@@ -12,7 +12,8 @@ ya-core-model = { version = "^0.9", features = ["version"] }
 ya-persistence = "0.3"
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+#ya-service-bus = "0.6.1"
+ya-service-bus = "0.6.1"
 
 actix-web = "4"
 anyhow = "1.0"
