--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -44,7 +44,7 @@ ya-core-model = { version = "^0.9", features = ["activity", "appkey"] }
 ya-runtime-api = { version = "0.7", path = "runtime-api", features = [
     "server",
 ] }
-ya-service-bus = { path = "/home/skrotki/golem/ya-service-bus" }
+ya-service-bus = "0.6.1"
 ya-transfer = "0.3"
 ya-utils-path = "0.1"
 ya-std-utils = "0.1"
