--- a/core/payment-driver/erc20next/Cargo.toml
+++ b/core/payment-driver/erc20next/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 default = []
 
 [dependencies]
+actix = { version = "0.13", default-features = false }
 async-trait = "0.1"
 anyhow = "1.0"
 awc = { version = "3", features = ["openssl"] }
