goth: fix payment-config

--- a/goth_tests/domain/ya-provider/goth-config.yml
+++ b/goth_tests/domain/ya-provider/goth-config.yml
@@ -54,7 +54,7 @@ node-types:
 nodes:
   - name: "requestor"
     type: "Requestor"
-    payment-config: "erc20next"
+    payment-config: "erc20"
 
   - name: "provider-1"
     type: "Wasm-Provider"
