--- a/goth_tests/domain/payments/goth-config.yml
+++ b/goth_tests/domain/payments/goth-config.yml
@@ -57,9 +57,9 @@ node-types:
 nodes:
   - name: "requestor"
     type: "Requestor"
-    payment-config: "erc20next"
+    payment-config: "erc20"
 
   - name: "provider-1"
     type: "Provider"
     use-proxy: True
-    payment-config: "erc20next"
+    payment-config: "erc20"
