--- a/core/payment/Cargo.toml
+++ b/core/payment/Cargo.toml
@@ -23,7 +23,7 @@ ya-persistence = "0.3"
 ya-service-api = "0.1"
 ya-service-api-interfaces = "0.2"
 ya-service-api-web = "0.2"
-ya-service-bus = "0.6.1"
+ya-service-bus = { version = "0.6.3" }
 
 actix-web = "4"
 anyhow = "1.0"
