--- a/goth_tests/domain/exe_units/goth-config.yml
+++ b/goth_tests/domain/exe_units/goth-config.yml
@@ -23,7 +23,7 @@ docker-compose:
 
   compose-log-patterns:
     ethereum-mainnet: ".*Wallets supplied."
-    ethereum-goerli: ".*Wallets supplied."
+    ethereum-holesky: ".*Wallets supplied."
     ethereum-polygon: ".*Wallets supplied."
 
 
