--- a/goth_tests/domain/payments/goth-config.yml
+++ b/goth_tests/domain/payments/goth-config.yml
@@ -22,7 +22,7 @@ docker-compose:
 
   compose-log-patterns:
     ethereum-mainnet: ".*Wallets supplied."
-    ethereum-goerli: ".*Wallets supplied."
+    ethereum-holesky: ".*Wallets supplied."
     ethereum-polygon: ".*Wallets supplied."
 
 key-dir: "../../assets/keys"
