--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -63,7 +63,7 @@ strum = "0.24"
 strum_macros = "0.24"
 sys-info = "0.8.0"
 thiserror = "1.0.14"
-tokio = { version = "1", features = ["process", "signal"] }
+tokio = { version = "1", features = ["macros", "process", "signal"] }
 tokio-stream = { version = "0.1.6", features = ["sync"] }
 url = "2.1.1"
 walkdir = "2.3.1"
