--- a/exe-unit/components/http-proxy/Cargo.toml
+++ b/exe-unit/components/http-proxy/Cargo.toml
@@ -13,8 +13,8 @@ serde = { version = "1.0.193", features = ["derive"] }
 chrono = "0.4"
 http = "1.0.0"
 serde_json = "1.0.111"
-tokio = "1.35.0"
-reqwest = "0.11.23"
+tokio = { version = "1.35.0", features = ["full"] }
+reqwest = { version = "0.11.23", features = ["json"] }
 log = { version = "0.4.20", features = [] }
 async-stream = "0.3.5"
 futures = { version = "0.3", features = [] }
