--- a/exe-unit/components/http-proxy/Cargo.toml
+++ b/exe-unit/components/http-proxy/Cargo.toml
@@ -18,3 +18,6 @@ reqwest = { version = "0.11.23", features = ["json"] }
 log = { version = "0.4.20", features = [] }
 async-stream = "0.3.5"
 futures = { version = "0.3", features = [] }
+actix-web = "4"
+actix-http = "3"
+mockito = "1.2.0"
