--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -30,7 +30,7 @@ serde_json = "1.0"
 sha2 = "0.9.1"
 structopt = "0.3"
 thiserror = "1.0"
-tokio = { version = "1", features = ["fs"] }
+tokio = { version = "1", features = ["fs", "io-std", "signal", "io-util"] }
 uuid = { version = "0.8", features = ["v4"] }
 rustc-hex = "2.1.0"
 yansi = "0.5.0"
